# ChangeLog for media-libs/libechonest
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libechonest/ChangeLog,v 1.23 2013/03/17 15:52:34 hwoarang Exp $

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

*libechonest-2.0.3 (12 Mar 2013)

  12 Mar 2013; Samuli Suominen <ssuominen@gentoo.org>
  +libechonest-2.0.3.ebuild:
  Version bump wrt #457566 by Uwe L. Korn and Nikoli

  12 Mar 2013; Samuli Suominen <ssuominen@gentoo.org>
  -libechonest-1.2.1.ebuild, -files/libechonest-1.2.1-Werror.patch:
  old

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> libechonest-1.2.1.ebuild,
  libechonest-2.0.2.ebuild:
  Move Qt dependencies to the new category

  22 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libechonest-2.0.2.ebuild:
  Stable for x86, wrt bug #451404

  13 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libechonest-2.0.2.ebuild:
  Stable for amd64, wrt bug #451404

  11 Jan 2013; Samuli Suominen <ssuominen@gentoo.org>
  -libechonest-2.0.1.ebuild:
  old

*libechonest-2.0.2 (11 Jan 2013)

  11 Jan 2013; Samuli Suominen <ssuominen@gentoo.org>
  +libechonest-2.0.2.ebuild:
  Version bump wrt #451192 by Uwe L. Korn (and Nikoli)

  27 Dec 2012; Julian Ospald <hasufell@gentoo.org> libechonest-1.2.1.ebuild,
  +files/libechonest-1.2.1-Werror.patch, libechonest-2.0.1.ebuild,
  +files/libechonest-2.0.1-Werror.patch:
  remove Werror wrt #448160

*libechonest-2.0.1 (29 Jul 2012)

  29 Jul 2012; Samuli Suominen <ssuominen@gentoo.org>
  +libechonest-2.0.1.ebuild:
  Version bump wrt #427858 by Johannes Huber

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> libechonest-1.2.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  22 Dec 2011; Samuli Suominen <ssuominen@gentoo.org>
  -libechonest-1.1.4.ebuild, -libechonest-1.2.0.ebuild:
  old

  22 Dec 2011; Markus Meier <maekke@gentoo.org> libechonest-1.2.1.ebuild:
  x86 stable, bug #392425
