@@ -4,26 +4,20 @@ Hash: SHA256
 AUX libechonest-2.0.1-Werror.patch 1155 SHA256 e540a347637dc6116a3944dfdb99310552626c24622f40d4cf5f39e8bd080d3a SHA512 bad1157fe2d041be36ae55ef6f53e3125d918f4ff2ca79b20e7285a8e01241ed28d2674031b9c4a614ae0b5fe9581076d535b50160e6edef18f447cf0f537555 WHIRLPOOL 1a9dac2332848cdbe18614a5c6d20d048c5e41e81317338435bea5cb3765e659462e736a739a322d7e07feca4b3dccb7c03a3f60664fc6d46c8d2231bcf6ab5d
 DIST libechonest-2.0.2.tar.bz2 82005 SHA256 e0d9b3fe7bf5fff0ce8d0f182c4cac8ea3b478c57be21549fc57da69c1a3088c SHA512 fb8baf396206cc567ae880c3f19191bd5a723820a8a8f7ea96f1065cea88c213b46ec9f7688838353331bdac105893c4e9ea118e5b17cdda313dce5ba810a1fb WHIRLPOOL d1bfd6059c5e648e190bf4ba9ddb5a3bdaeca8af346c34dc0f0177f3f05314b491f37bba2ad05944e6ff9b4ddd88e7042a089c9ecb370e75b61b6b405aa5e8d7
 DIST libechonest-2.0.3.tar.bz2 82667 SHA256 04c1fd666e7053eebcc5c19f75aa316af6b1100cb8cb8ff2303bb510f193364a SHA512 3e1e90369ddbc22119d572d684beee1d5479a735c3cca1572cdb3802bac5693e722884d485c27ed564992a411ade1a3e28bcc72b69f156441975363d86944fa5 WHIRLPOOL f4d8dc8f40ba6c65cc5ec892db946c9f2c96a7a85029260a6359ad7d879a25e46349079e79ba965b9ea6284eff45c6c54be6c643c6a424745695bb1ba1224f5e
+DIST libechonest-2.1.0.tar.bz2 82308 SHA256 f90064a934a6acd53da8104f5d6346b9f4d02de07ba7144e1d6943b3fe4f3c6e SHA512 5fa336be7a924f3185417136388d14634ce80e6aedf7534f24af8c3c71c970ff4ff5357d2ab4970df13670520cacede1501e5bf1da52261ac201e5cd78b31342 WHIRLPOOL 4be7634a83f7421f055bc3ea71a9f7aa0c8259537221d880c10acd65550cb4701d798e7ff5211d032f3526ad66731bbbf3b8ffc1df21340e3a8085181e40f1a5
 EBUILD libechonest-2.0.2.ebuild 762 SHA256 9c3b7ce0c7974c0ca3295b3ea585162511fa0144b37d8867087602cda1976607 SHA512 f84ce7389d827fdcd2b37ac4d3c3918643c1a2b528e35d475c47ccfaa990135cef8dcd156d30dad40b8fe0e3e577c7a44e47a2a27d12277e871babb713d20a80 WHIRLPOOL bd419878f209d5225afcba6171c9088fce905504545da84c2eb15669980c232074d7e722f39683bc8753dfe0c43119b4da503aa9a55853159d1b4616bed1c8f0
 EBUILD libechonest-2.0.3.ebuild 765 SHA256 5e5db59f69e1f47354d7c821b08b4a5e41215b8203eee676a47ee82e9e17a74f SHA512 7c8de271da978857d669fbd55ec56cf035edb44823274f8b1542fbb15b0d5f1e0e9a4c978f0bceb2686ea76bc1b17847d514831ec207731166b42d677324a6a2 WHIRLPOOL 4a6ee8f97e8e79662209c4a15dde55103206a1b23ba5e59deaa974d1eadb8a17f485f7f5e0966aa1f309887da97f13241bdbc42dbbdef5e453a3b5173508f6db
-MISC ChangeLog 3306 SHA256 e01b17db21626718c0d564ce744ef474195c3637a00a5937903e13fee2cc6d57 SHA512 e765dc02513a10fba4a5054e6804dd75bbd1b1b97b3c06969756f924c3f348cf00eb98f87b43ceed3fe48f95a97f771e4e5b4d0340304e5b91a099d737ec6661 WHIRLPOOL 2472caf7239ca3b39d325fef744a114ffe2c20afdc326972e2e5a1a437965afafaac181daaa078066097dcf010f59746dc18823cf9c3dba84077610e59ef63ed
+EBUILD libechonest-2.1.0.ebuild 708 SHA256 64b32c60b0b834fea38f343f4a310db1909d3627a7ac6a4e2a80b0cc43d3dfae SHA512 9cbbb210b0990ef0c83ded8f9e589f613c837b66f99e5cc5e254d68b6da171a87df3a31caa434a5780c8d20428b162390f1ddef30e94363003735224c68d300e WHIRLPOOL 500c5ed110a694285fe27db8d01a963bc97366b89da4c0c7dfb42263f52e511e46a405779bbcd0ab7b1d07baecc849e0a4ea2c3eb6c8cd21d7f6ccd32dec2cd8
+MISC ChangeLog 3475 SHA256 8c6c957ad964f866fd62767e5c367d34ac870eac45c47971218197d3e908d40e SHA512 1cbadae38c3edf69a0f018d31db454e50e86624da482e8e2324f3d1357b065dde661578f5511bd694d86e0b89c3595acac8379acc4ab1ff3f149d45c375d46e1 WHIRLPOOL 663fbaaed3c0182c9559d5459be614fedcd05be8d0cc102b03894b00377ff5e64c9762daa83ea7b5007a4110fb4d0afb59c4efc1befca5ba7b444b0573332c13
 MISC metadata.xml 391 SHA256 5bc88448173532f8db04daa8ee32efe1b33fe5b2156e2802725fe2d59414177e SHA512 3fbc2c0beded4ec6ae87fa6c1b42356adaf1ae8f0ba7cda5997e2359f00ff5819a7253589476f2ca64c5b5553a8685337bcb159c9ee636fae47270ef32c3030d WHIRLPOOL f8b501189773958d0211a2464159a26b63799e9646e22105b763352dea986be3ad94cac17bfeb5036c18a26f50dcce4888b46ec21eca277b728a6db84bd37c98
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQJ8BAEBCABmBQJRRebDXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88hMYP/iHMYz55bPsFzmi1kQVuSZ9d
-eWzfOO1cdWVuXbq6EMnjvMnoGM18yK3Ha+9XRalLhAnYZxh762ylKSZvRMW2v2/a
-ku3kv1Ba73kdeRUN97nldTuj1bVWmdTZINGzwNYhNFr92WskB4L8XpW8/1ioTKEF
-M+dRpwKM/YjNSU/WiEhPOEd7YTQLKD2ver5QlwO3/kVtNAgK6t7eNImJgN/itmOb
-fYJXhlJGORou6MZmux/SGZSR909O4M2N0YufWLGtBusLchadzU/j1G3/8YxZYkNt
-HhVa63bqKFQ9DWxlyIeDaRFVfWWxXRXOzLses1RycU2NpWFN2SldqgIEj1S8YY5G
-ncyZmWAeJ/j58lXVCM7Ua6F8NFERKemV9NVEuxGEvYYmzkacSNBt08zsN09wu/+l
-4XRUQyytIib6lQ/mljgKLTETM7L63OLYlbPgwdrfqrMT5dyyjEQk2fGoQpanwb9C
-Rszvo4E1hEKXp+bohmZ+g92XkNRFg6F+js0QJXqZx7YgQK4+OF7tNbulJZnNRTnO
-0HIlUoIbYTWXfV3oxH3DJFInTL6ZwN1VbGEwklh2XRn7GTnl/bIlj2lS7unEnEJM
-cF3DvyDIqGzuHW1mupuZFa1Gg24cHUr12BuDWT3kJ8oNWBk11LkukSInoiSvE8Ue
-++J73KGxMOUm5bp/9318
-=m9sS
+iQEcBAEBCAAGBQJRtGIQAAoJEO+t9ga+3I3aM/0IALGlzExJgeqPywFnI0i5RZfo
+6w9uyghCuREOmXVHyxiZ3dCi4Ftj47ZWQ+q+LtgAo21BiR1VEhHAr1cO6AI+qABv
+1+If2SxxnP0wmUcGUiEvWcWEBSArVlYwsBOhgYR4DWiuiQ22K4+EgERWUwe7d0Kk
+3eQHxME8aOhYgcoQw5tP80J64LdkyuXHYdH4p2oZaSbASsLDZZiZboV5xj1V+xSA
+b8UFEF2F+Mu9b9HBvYRCCZzKG9Cpna5r2XcMLH8MfEMG0W36X2hEqdm+sL1pkyyg
+JTDyHZaE5SkyHtHXAPDfO2dh9sjkrj5/oqcJ6s1N+aC7kxtoA+TlagGltVG1su8=
+=aOdH
 -----END PGP SIGNATURE-----
