@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libechonest
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libechonest/ChangeLog,v 1.23 2013/03/17 15:52:34 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libechonest/ChangeLog,v 1.24 2013/06/09 11:07:49 johu Exp $
+
+*libechonest-2.1.0 (09 Jun 2013)
+
+  09 Jun 2013; Johannes Huber <johu@gentoo.org> +libechonest-2.1.0.ebuild:
+  Version bump by Nikoli <nikoli@lavabit.com> wrt bug #472016.
 
   17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
   Add proxy-maintainers to metadata.xml
